--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,21 @@
   <packaging>war</packaging>
   <name>es-spring-base</name>
   <properties>
-        <spring.version>4.0.1.RELEASE</spring.version>
+        <spring.version>4.3.14.RELEASE</spring.version>
         <jstl.version>1.2</jstl.version>
         <javax.servlet.version>3.0.1</javax.servlet.version>
   </properties>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.springframework.data</groupId>
+  			<artifactId>spring-data-releasetrain</artifactId>
+  			<version>Gosling-RELEASE</version>
+  			<type>pom</type>
+  			<scope>import</scope>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
   <dependencies>
 	  <dependency>
 	            <groupId>org.springframework</groupId>
@@ -32,6 +43,41 @@
             <artifactId>jstl</artifactId>  
             <version>${jstl.version}</version>  
         </dependency>
+       <dependency>
+       	<groupId>org.hibernate.javax.persistence</groupId>
+       	<artifactId>hibernate-jpa-2.1-api</artifactId>
+       	<version>1.0.0.Final</version>
+       </dependency>
+	   <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <version>1.5.11.BUILD-SNAPSHOT</version>
+		</dependency>
+	  	<dependency>
+	  		<groupId>org.hibernate</groupId>
+	  		<artifactId>hibernate-entitymanager</artifactId>
+	  		<version>5.0.3.Final</version>
+	  	</dependency>
+	  	<dependency>
+	  		<groupId>com.h2database</groupId>
+	  		<artifactId>h2</artifactId>
+	  		<version>1.4.190</version>
+	  	</dependency>
+	  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-log4j12</artifactId>
+  		<version>1.7.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>1.2.17</version>
+  	</dependency>
   </dependencies>
   <build>
     <testSourceDirectory>src/main/test</testSourceDirectory>
